--- a/assignment.html
+++ b/assignment.html
@@ -33,6 +33,33 @@
                 <img src="./assets/hero.png" alt="">
             </div>
         </div>
+
+        <div class="Pillars-of-bd">
+            <h2 class="pillar-title">Pillars of "Bangladesh 2.0"</h2>
+            <div class="pillar-box">
+                <div class="box-style">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h4 class="piller-header">Innovation</h4>
+                    <p class="header-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                </div>
+                <div class="box-style">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h4 class="piller-header">Sustainability</h4>
+                    <p class="header-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                </div>
+                <div class="box-style">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h4 class="piller-header">Infrastructure</h4>
+                    <p class="header-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                </div>
+                <div class="box-style">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h4 class="piller-header">Empowerment</h4>
+                    <p class="header-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                </div>
+            </div>
+        </div>
+
     </main>
     <footer>
 
