added the 'the vision of future' section

--- a/assignment.html
+++ b/assignment.html
@@ -60,6 +60,32 @@
             </div>
         </div>
 
+        <div class="vision-section">
+            <h2 class="vision-title">The Vision of Future</h2>
+            <p class="vision-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+
+            <div class="vision-box">
+                <div class="blue-box">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h4 class="box-title">Digital Transformation</h4>
+                    <p class="box-description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <button class="blue-btn">Learn More</button>
+                </div>
+                <div class="green-box">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h4 class="box-title">Green Energy</h4>
+                    <p class="box-description">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                    <button class="green-btn">Learn More</button>
+                </div>
+                <div  class="yellow-box">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h4 class="box-title">Modern Infrastructure</h4>
+                    <p class="box-description">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                    <button class="yellow-btn">Learn More</button>
+                </div>
+            </div>
+        </div>
+
     </main>
     <footer>
 
