--- a/assignment.html
+++ b/assignment.html
@@ -11,6 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./Style/style.css">
+    <link rel="shortcut icon" href="./assets/images.jpeg" type="image/x-icon">
 </head>
 
 <body class="fira-sans-regular">
@@ -84,7 +85,15 @@
                     <button class="yellow-btn">Learn More</button>
                 </div>
             </div>
+            <div class="quote">
+                <div class="quote-img">
+                    <p class="quote-description">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto soluta necessitatibus vero?"</p>
+                    <h3 class="dr">Dr. Muhammad Yunus</h3>
+                    <p class="dr-title">Chief Adviser of the People's Republic of Bangladesh</p>
+                </div>
+            </div>
         </div>
+
 
     </main>
     <footer>
