--- a/assignment.html
+++ b/assignment.html
@@ -26,9 +26,9 @@
         <div class="bd-2-0">
             <div>
                 <h4 class="header-subtitle">Bangladesh 2.0</h4>
-                <h1  class="header-title">Idea , innovation , <br>
-                vision and challenges in <br> New Bangladesh.</h1>
-                    <button class="explore-btn">Explore New Bangladesh</button>
+                <h1 class="header-title">Idea , innovation , <br>
+                    vision and challenges in <br> New Bangladesh.</h1>
+                <button class="explore-btn">Explore New Bangladesh</button>
             </div>
             <div>
                 <img src="./assets/hero.png" alt="">
@@ -41,60 +41,127 @@
                 <div class="box-style">
                     <img src="./assets/card-icon.png" alt="">
                     <h4 class="piller-header">Innovation</h4>
-                    <p class="header-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    <p class="header-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi
+                        quos </p>
                 </div>
                 <div class="box-style">
                     <img src="./assets/card-icon.png" alt="">
                     <h4 class="piller-header">Sustainability</h4>
-                    <p class="header-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    <p class="header-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi
+                        quos </p>
                 </div>
                 <div class="box-style">
                     <img src="./assets/card-icon.png" alt="">
                     <h4 class="piller-header">Infrastructure</h4>
-                    <p class="header-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    <p class="header-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi
+                        quos </p>
                 </div>
                 <div class="box-style">
                     <img src="./assets/card-icon.png" alt="">
                     <h4 class="piller-header">Empowerment</h4>
-                    <p class="header-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    <p class="header-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi
+                        quos </p>
                 </div>
             </div>
         </div>
 
         <div class="vision-section">
             <h2 class="vision-title">The Vision of Future</h2>
-            <p class="vision-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <p class="vision-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+                cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in
+                renewable energy, digital transformation, and robust infrastructure, the country is set to become a
+                global model of development.</p>
 
             <div class="vision-box">
                 <div class="blue-box">
                     <img src="./assets/card-icon.png" alt="">
                     <h4 class="box-title">Digital Transformation</h4>
-                    <p class="box-description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <p class="box-description">Creating a nationwide digital ecosystem to enhance connectivity and
+                        access to services for all citizens.</p>
                     <button class="blue-btn">Learn More</button>
                 </div>
                 <div class="green-box">
                     <img src="./assets/card-icon.png" alt="">
                     <h4 class="box-title">Green Energy</h4>
-                    <p class="box-description">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                    <p class="box-description">Investments in solar and wind energy to ensure a sustainable and
+                        eco-friendly future.</p>
                     <button class="green-btn">Learn More</button>
                 </div>
-                <div  class="yellow-box">
+                <div class="yellow-box">
                     <img src="./assets/card-icon.png" alt="">
                     <h4 class="box-title">Modern Infrastructure</h4>
-                    <p class="box-description">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                    <p class="box-description">Building state-of-the-art infrastructure to support economic growth and
+                        global competitiveness.</p>
                     <button class="yellow-btn">Learn More</button>
                 </div>
             </div>
             <div class="quote">
                 <div class="quote-img">
-                    <p class="quote-description">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto soluta necessitatibus vero?"</p>
+                    <p class="quote-description">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas,
+                        ducimus labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis
+                        exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores
+                        ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est
+                        vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur,
+                        dignissimos excepturi aliquam architecto soluta necessitatibus vero?"</p>
                     <h3 class="dr">Dr. Muhammad Yunus</h3>
                     <p class="dr-title">Chief Adviser of the People's Republic of Bangladesh</p>
                 </div>
             </div>
         </div>
 
-
+        <div class="news-section">
+            <h2 class="text-style-1">Recent News</h2>
+            <p class="text-style-2">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge
+                technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable
+                energy, digital transformation, and robust infrastructure, the country is set to become a global model
+                of development.</p>
+                
+                <div class="news-container">
+                    <div class="news-box">
+                        <div>
+                            <img src="./assets/satelite.png" alt="">
+                        </div>
+                        <div>
+                            <h2 class="news-title">Bangladesh Launches New Satellite</h2>
+                            <img src="./assets/al-jazeera.png" alt="">
+                            <p class="Time-date">Date: 05/01/2025, Time: 10.25 PM</p>
+                            <p class="news-details">Not until the creation and maintenance of decent conditions of life for all people are recognized
+                                and accepted as a common obligation of all people and all countries—not until then shall we,
+                                with a certain degree of justification, be able to speak of humankind as civilized</p>
+                            <button class="learn-more">Learn More</button>    
+                        </div>
+                    </div>
+                    <div class="news-box">
+                        <div>
+                            <h2 class="news-title">Bangladesh Launches New Satellite</h2>
+                            <img src="./assets/al-jazeera.png" alt="">
+                            <p class="Time-date">Date: 05/01/2025, Time: 10.25 PM</p>
+                            <p class="news-details">Not until the creation and maintenance of decent conditions of life for all people are recognized
+                                and accepted as a common obligation of all people and all countries—not until then shall we,
+                                with a certain degree of justification, be able to speak of humankind as civilized</p>
+                            <button class="learn-more">Learn More</button>    
+                        </div>
+                        <div>
+                            <img src="./assets/satelite.png" alt="">
+                        </div>
+                    </div>
+                    <div class="news-box">
+                        <div>
+                            <img src="./assets/satelite.png" alt="">
+                        </div>
+                        <div>
+                            <h2 class="news-title">Bangladesh Launches New Satellite</h2>
+                            <img src="./assets/al-jazeera.png" alt="">
+                            <p class="Time-date">Date: 05/01/2025, Time: 10.25 PM</p>
+                            <p class="news-details">Not until the creation and maintenance of decent conditions of life for all people are recognized
+                                and accepted as a common obligation of all people and all countries—not until then shall we,
+                                with a certain degree of justification, be able to speak of humankind as civilized</p>
+                            <button class="learn-more">Learn More</button>    
+                        </div>
+                    </div>
+                </div>
+        </div>
+        
     </main>
     <footer>
 
