--- a/assignment.html
+++ b/assignment.html
@@ -190,6 +190,15 @@
         
     </main>
     <footer>
+        <div class="footer-section">
+            <div class="footer-content">
+                <h2 class="footer-title">Bangladesh 2.0</h2>
+            <hr>
+            <div class="footer-img"><img src="./assets/facebook.png" alt="">
+                <img src="./assets/instagram.png" alt="">
+                <img src="./assets/x.png" alt=""></div>
+            </div>
+        </div>
         
     </footer>
 
