added hover effect and fixde name issue

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="fira-sans-regular">
     <header>
         <nav class="nav-bar">
-            <h2 class="nav-title">Bangladesh 2.0</h2>
+            <a href=""><h2 class="nav-title">Bangladesh 2.0</h2></a>
             <button class="nav-btn">Sign In</button>
         </nav>
 
@@ -41,26 +41,22 @@
                 <div class="box-style">
                     <img src="./assets/card-icon.png" alt="">
                     <h4 class="piller-header">Innovation</h4>
-                    <p class="header-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi
-                        quos </p>
+                    <p class="header-description">Failure is an option here. If things are not failing, you are not innovating enough </p>
                 </div>
                 <div class="box-style">
                     <img src="./assets/card-icon.png" alt="">
                     <h4 class="piller-header">Sustainability</h4>
-                    <p class="header-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi
-                        quos </p>
+                    <p class="header-description">There is no such thing as 'away'. When we throw anything away it must go somewhere.</p>
                 </div>
                 <div class="box-style">
                     <img src="./assets/card-icon.png" alt="">
                     <h4 class="piller-header">Infrastructure</h4>
-                    <p class="header-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi
-                        quos </p>
+                    <p class="header-description">investment in infrastructure is a long term requirement for growth.</p>
                 </div>
                 <div class="box-style">
                     <img src="./assets/card-icon.png" alt="">
                     <h4 class="piller-header">Empowerment</h4>
-                    <p class="header-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi
-                        quos </p>
+                    <p class="header-description">Empowerment is the process of gaining the ability to make choices and control over one's life. </p>
                 </div>
             </div>
         </div>
@@ -192,11 +188,13 @@
     <footer>
         <div class="footer-section">
             <div class="footer-content">
-                <h2 class="footer-title">Bangladesh 2.0</h2>
+                <a href=""><h2 class="footer-title">Bangladesh 2.0</h2></a>
             <hr>
-            <div class="footer-img"><img src="./assets/facebook.png" alt="">
-                <img src="./assets/instagram.png" alt="">
-                <img src="./assets/x.png" alt=""></div>
+            <div class="footer-img">
+                <a href=""><img src="./assets/facebook.png" alt=""></a>
+                <a href=""><img src="./assets/instagram.png" alt=""></a>
+                <a href=""><img src="./assets/x.png" alt=""></a>
+            </div>
             </div>
         </div>
         
