changed icons and added text insted of lorems

--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
                     <p class="header-description">Failure is an option here. If things are not failing, you are not innovating enough </p>
                 </div>
                 <div class="box-style">
-                    <img src="./assets/card-icon.png" alt="">
+                    <img src="./assets/Sustainability icon.png" alt="">
                     <h4 class="piller-header">Sustainability</h4>
                     <p class="header-description">There is no such thing as 'away'. When we throw anything away it must go somewhere.</p>
                 </div>
                 <div class="box-style">
-                    <img src="./assets/card-icon.png" alt="">
+                    <img src="./assets/infrustrructure icon.png" alt="">
                     <h4 class="piller-header">Infrastructure</h4>
                     <p class="header-description">investment in infrastructure is a long term requirement for growth.</p>
                 </div>
                 <div class="box-style">
-                    <img src="./assets/card-icon.png" alt="">
+                    <img src="./assets/empowerment icon.png" alt="">
                     <h4 class="piller-header">Empowerment</h4>
                     <p class="header-description">Empowerment is the process of gaining the ability to make choices and control over one's life. </p>
                 </div>
@@ -70,21 +70,21 @@
 
             <div class="vision-box">
                 <div class="blue-box">
-                    <img src="./assets/card-icon.png" alt="">
+                    <img src="./assets/Digital Transformation icon.png" alt="">
                     <h4 class="box-title">Digital Transformation</h4>
                     <p class="box-description">Creating a nationwide digital ecosystem to enhance connectivity and
                         access to services for all citizens.</p>
                     <button class="blue-btn">Learn More</button>
                 </div>
                 <div class="green-box">
-                    <img src="./assets/card-icon.png" alt="">
+                    <img src="./assets/green energy icon.png" alt="">
                     <h4 class="box-title">Green Energy</h4>
                     <p class="box-description">Investments in solar and wind energy to ensure a sustainable and
                         eco-friendly future.</p>
                     <button class="green-btn">Learn More</button>
                 </div>
                 <div class="yellow-box">
-                    <img src="./assets/card-icon.png" alt="">
+                    <img src="./assets/infrustrructure icon.png" alt="">
                     <h4 class="box-title">Modern Infrastructure</h4>
                     <p class="box-description">Building state-of-the-art infrastructure to support economic growth and
                         global competitiveness.</p>
@@ -93,12 +93,7 @@
             </div>
             <div class="quote">
                 <div class="quote-img">
-                    <p class="quote-description">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas,
-                        ducimus labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis
-                        exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores
-                        ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est
-                        vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur,
-                        dignissimos excepturi aliquam architecto soluta necessitatibus vero?"</p>
+                    <p class="quote-description">"Muhammad Yunus, who created microcredit, invented social business, and earned a Nobel Peace Prize for his work in alleviating poverty, is one of today’s most trenchant social critics. Now he declares it’s time to admit that the capitalist engine is broken—that in its current form, it inevitably leads to rampant inequality, massive unemployment, and environmental destruction. We need a new economic system that unleashes altruism as a creative force just as powerful as self-interest. Is this a pipe dream? Not at all. financing female-owned businesses in cities across the United States"</p>
                     <h3 class="dr">Dr. Muhammad Yunus</h3>
                     <p class="dr-title">Chief Adviser of the People's Republic of Bangladesh</p>
                 </div>
@@ -107,15 +102,12 @@
 
         <div class="news-section">
             <h2 class="text-style-1">Recent News</h2>
-            <p class="text-style-2">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge
-                technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable
-                energy, digital transformation, and robust infrastructure, the country is set to become a global model
-                of development.</p>
+            <p class="text-style-2">Bangladesh 2.0 envisions reshaping the nation’s future by leveraging advanced technology, fostering inclusive growth, and prioritizing sustainability. Through strategic initiatives in renewable energy, digital innovation, and modern infrastructure development, the country aspires to establish itself as a global leader in sustainable progress.</p>
                 
                 <div class="news-container">
                     <div class="news-box">
                         <div>
-                            <img src="./assets/satelite.png" alt="">
+                            <img src="./assets/satelite img 2.png" alt="">
                         </div>
                         <div>
                             <h2 class="news-title">Bangladesh Launches New Satellite</h2>
@@ -138,7 +130,7 @@
                             <button class="learn-more">Learn More</button>    
                         </div>
                         <div>
-                            <img src="./assets/satelite.png" alt="">
+                            <img src="./assets/satelite img 3.png" alt="">
                         </div>
                     </div>
                     <div class="news-box">
